# CreditReviewAnalyzer

./: README.md  main.py  requirements.txt  setup.cfg
creditreviewanalyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
creditreviewanalyzer/sensitivityanalysis/: loan_payment_calculator.py  sensitivity_analysis_calculator.py
sensitivityanalysis/: loan_payment_calculator.py  sensitivity_analysis_calculator.py
