[metadata]
name = creditreviewanalyzer
description = performs credit review on given data
author = Matthew Qandil
license = MIT
license_file = LICENSE
platforms = osx, unix
classifiers = 
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = 
    creditreviewanalyzer
install_requires = 
    IPython>=7.27.0
    pandas>=1.3.2
python_requires = >=3.6
package_directory = 
    =CreditReviewAnalyzer
zip_safe = no